Added tags to posts; page now centered

--- a/lgfischer-example.html
+++ b/lgfischer-example.html
@@ -19,7 +19,8 @@
 	</header>
 	<article>
 		<h1><a href="#">How to (legally) steal the look and feel of Twitter</a></h1>
-		<span title="30 Sep 2004" class="date"><span>30</span><span>Sep</span><span>'04</span></span>
+		<p title="30 Sep 2004" class="date"><span>30</span><span>Sep</span><span>'04</span></p>
+		<p class="author">by Leonardo Garcia Fischer</p>
 
 <figure>
 <a href="http://www.flickr.com/photos/afagen/3205898987" title="Thanks afagen for the photo"><img src="http://4.bp.blogspot.com/-IY6RpgfSOlE/TyQZ2wrbxyI/AAAAAAAAAnc/erw8eq7IjQM/s1600/times_square.jpg" /></a>
