Improving the tag css, tweak on the social wall tooltips

--- a/lgfischer-example.html
+++ b/lgfischer-example.html
@@ -171,6 +171,7 @@ I hope this can help you develop widget based apps. You can <a href="http://min.
 </p>
 
 
+<p>Tags: <a href="http://leonardofischer.com/tag/android-sdk/" rel="tag" class="tag">Android SDK</a>, <a href="http://leonardofischer.com/tag/widgets/" rel="tag">Widgets</a></p>
 
 <h2><a id="comments" href="#comments">Comments</a></h2>
 <ol class="comments">
@@ -226,6 +227,7 @@ I hope this can help you develop widget based apps. You can <a href="http://min.
 						</p>
 											</form>
 							</div>
+
 
 
 
